{
    "name": "Inputs",
    "maps": [
        {
            "name": "Player",
            "id": "6fc85bd8-1abb-4528-bd50-a61361d319aa",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "5dc7827f-deb5-4c28-8a05-7e68a66e5277",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "ea21c06c-3827-4c77-86dd-c0c8a91995e8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spin",
                    "type": "Button",
                    "id": "f365a451-b99f-4c50-8d50-2aa4170f6179",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "be552001-c555-4e16-8b30-591f3c8a7238",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "4e5f4ae2-cbeb-46e7-a25d-ffee2db20d37",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cast Spell",
                    "type": "Button",
                    "id": "dbcddc00-58af-4a27-962d-9535cee7ad09",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1f874fff-b17a-46e5-9901-de00c04f5ce2",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5c7c5cd-72f1-425d-8173-e83468258d09",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89561d9a-2e3a-4e00-b442-2ce248a3f568",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f54a66b-876a-405e-aada-76c9e5e06036",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "079defbb-63e5-478e-ac9a-9bb377d05b96",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1140e8a-742c-43d2-83e6-4f0ec4ee180e",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "324329bf-c299-4d70-b27c-ee2a91c10323",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cast Spell",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TitleScreen",
            "id": "5a97e697-8ecb-48ee-a256-76d51f135d54",
            "actions": [
                {
                    "name": "StartMatch",
                    "type": "Button",
                    "id": "d413e98b-cced-45b5-933e-91c7471b8951",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f5bef909-d254-4c41-89a5-ac8198d06cbd",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartMatch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MatchSetup",
            "id": "9968ff93-a537-49be-9d53-ee898a11e174",
            "actions": [
                {
                    "name": "ToggleJoin",
                    "type": "Button",
                    "id": "42c0a69e-f144-4450-8653-1307b450b2ab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleTeam",
                    "type": "Button",
                    "id": "80315961-e664-4741-ba26-dcada1fe545a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleReady",
                    "type": "Button",
                    "id": "0fac0c70-e6a1-4f23-87fb-df9a763ee6d8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeName",
                    "type": "Button",
                    "id": "697bfbdd-9079-48c5-9297-067f87e10298",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "98e02db1-e17a-4566-aea3-d43e00fdf2dd",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleJoin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "562cd9c2-0c97-43c0-89f8-ec9fde1a8668",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleTeam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "021df130-772d-49bc-a3a5-18ac9c915f00",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleReady",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bac975f6-45d4-4612-b1d1-9b451d87ef6b",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeName",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Test",
            "id": "612e0f97-d166-4679-b87b-41c9411ea62b",
            "actions": [
                {
                    "name": "Test",
                    "type": "Button",
                    "id": "86406238-99ac-4757-90a1-a586a8cdb47d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fee34adc-495a-4474-a379-36fb595640a0",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        }
    ]
}